prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_colnum.nut
// EXPECT_ERROR: "expected column number after #pos:"
#pos:1:abc
let x = 1
